# portal

./: Cargo.toml  LICENSE  README.md
portal-client/: index.html  package.json
portal-client/src/: App.tsx  DirectoryPicker.tsx  FileViewer.tsx  ImageViewer.tsx  Layout.tsx  utils.ts
portal-client/src-tauri/: Cargo.toml  tauri.conf.json
portal-client/src-tauri/src/: lib.rs  main.rs
portal-client/src/components/: FileTree.tsx
portal-client/src/components/catalyst/: sidebar-layout.tsx
portal-client/src/data/: dirHistory.ts  dirTree.ts
portal-client/src/hooks/: directory.ts
portal-client/src/portalClient/: index.ts  protocol.ts
portal-proto/: Cargo.toml  build.rs
portal-proto/proto/: portal.proto
portal-proto/src/: lib.rs
portal-server/: Cargo.toml
portal-server/src/: main.rs
src/: main.rs
