[workspace]
resolver = "2"
members = ["portal-proto", "portal-server", "portal-client/src-tauri"]

[workspace.dependencies]
anyhow = "1.0.97"
prost = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
tonic = "0.12.3"
